--- a/client/src/app/spreadsheet/spreadsheet.scss
+++ b/client/src/app/spreadsheet/spreadsheet.scss
@@ -837,7 +837,7 @@ $blank-row-height: 32px;
       top: 50%;
       transform: translate(-50%, -50%);
     }
-    .fill-handler {
+    .fill-handle {
       position: absolute;
       z-index: 1;
       height: 4px;
