refactor: rename action menu methods to context menu and update related state management for improved clarity in spreadsheet component

--- a/client/src/app/spreadsheet/spreadsheet.html
+++ b/client/src/app/spreadsheet/spreadsheet.html
@@ -15,7 +15,7 @@
 <virtual-scroll
   [sideSpacing]="tableService.config().sideSpacing"
   [disable]="disableScroll"
-  (scrolling)="onScrolling()"
+  (scrolling)="onViewportScrolling()"
 >
   <!-- Header -->
   <div
