refactor: replace DatePipe with DateValuePipe in date field cell component for improved date formatting

--- a/client/src/app/spreadsheet/components/field-cell/date/cell.html
+++ b/client/src/app/spreadsheet/components/field-cell/date/cell.html
@@ -1,6 +1,6 @@
 @if (data !== undefined && data !== null) {
   <div class="field-cell__text-content">
-    {{ data | date }}
+    {{ data | dateValue }}
   </div>
 }
 @if (selecting) {
