--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,20 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@use './tailwind.css';
 @use 'primeicons/primeicons.css';
-@use 'primeflex/primeflex.scss';
 
-@import 'normalize.css' layer(normalize);
+html {
+  font-size: 14px;
+  font-family:
+    Inter var,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    Segoe UI Symbol;
+  font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
+  line-height: normal;
+}
 
 :focus,
 :focus-visible {
   outline: none;
-}
-
-html,
-body {
-  display: block;
-  width: 100%;
-  height: 100%;
-  font-family: Inter var, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol;
-  font-size: 14px;
 }
